edited style of the modal to avoid overflow

--- a/styles/app.css
+++ b/styles/app.css
@@ -229,6 +229,10 @@ textarea {
     margin-top: 10px;
 }
 
+.modal {
+     word-wrap: break-word;
+}
+
 .ui-autocomplete {
     z-index: 5000;
 }
